tests/unit/evaluation/minizinc/general/test_lb_ub_array_int.mzn_fd.err
MiniZinc: evaluation error: not yet supported
 in file test_lb_ub_array_int.mzn:7
